# dodo

dodo-project-dev/: README.md  pyproject.toml
dodo-project-dev/src/: run_notifier_service.py  run_services.py  run_telegram_bot.py
dodo-project-dev/src/config/: env_vars.py  settings.py
dodo-project-dev/src/db/: __init__.py  exceptions.py  redis_db.py
dodo-project-dev/src/db/sql_db/: __init__.py  engine.py  init_db.py  models.py  queries.py
dodo-project-dev/src/dodo_api/: __init__.py  executor.py  models.py  requests.py  serializers.py  services.py
dodo-project-dev/src/dodo_api/parsers/: __init__.py  excel.py  html.py
dodo-project-dev/src/dodo_api/utils/: exceptions.py  file_utils.py  time_utils.py  validators.py
dodo-project-dev/src/reports_loader_service/: canceled_orders_service.py  engine.py  statistics_service.py  stop_sales_service.py
dodo-project-dev/src/reports_notifier_service/: engine.py  telegram.py
dodo-project-dev/src/telegram_bot/: bot.py  callback_data_factory.py  filters.py  middlewares.py
dodo-project-dev/src/telegram_bot/handlers/: __init__.py  settings.py  start.py  statistics.py
dodo-project-dev/src/telegram_bot/keyboards/: buttons.py  markups.py
dodo-project-dev/src/telegram_bot/responses/: __init__.py  base.py  settings.py  statistics.py
dodo-project-dev/src/telegram_bot/services/: api.py  base.py  cache.py
dodo-project-dev/src/telegram_bot/utils/: data_types.py  exceptions.py  format_text.py  telegram_utils.py
dodo-project-dev/src/utils/: logger.py
